Cleanup repository setting definitions used for validation at 'Create Repository' statements - s3