@@ -22,25 +22,23 @@
 
 package io.crate.analyze.repositories;
 
-import com.amazonaws.Protocol;
 import com.google.common.collect.ImmutableMap;
+import io.crate.common.collections.Maps;
 import io.crate.sql.tree.Expression;
 import io.crate.sql.tree.GenericProperties;
 import io.crate.sql.tree.GenericProperty;
 import org.elasticsearch.common.inject.AbstractModule;
 import org.elasticsearch.common.inject.multibindings.MapBinder;
-import org.elasticsearch.common.settings.SecureSetting;
 import org.elasticsearch.common.settings.Setting;
-import org.elasticsearch.common.unit.ByteSizeUnit;
-import org.elasticsearch.common.unit.ByteSizeValue;
-import org.elasticsearch.monitor.jvm.JvmInfo;
 import org.elasticsearch.repositories.fs.FsRepository;
+import org.elasticsearch.repositories.s3.S3ClientSettings;
+import org.elasticsearch.repositories.s3.S3Repository;
 import org.elasticsearch.repositories.url.URLRepository;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 
@@ -91,42 +89,13 @@ public class RepositorySettingsModule extends AbstractModule {
         }
     };
 
-    /**
-     * Default is to use 100MB (S3 defaults) for heaps above 2GB and 5% of
-     * the available memory for smaller heaps.
-     */
-    private static final ByteSizeValue S3_DEFAULT_BUFFER_SIZE = new ByteSizeValue(
-        Math.max(
-            ByteSizeUnit.MB.toBytes(5), // minimum value
-            Math.min(
-                ByteSizeUnit.MB.toBytes(100),
-                JvmInfo.jvmInfo().getMem().getHeapMax().getBytes() / 20)),
-        ByteSizeUnit.BYTES);
-
-
     private static final TypeSettings S3_SETTINGS = new TypeSettings(
-        Collections.emptyMap(),
-        ImmutableMap.<String, Setting>builder()
-            .put("base_path", Setting.simpleString("base_path"))
-            .put("bucket", Setting.simpleString("bucket"))
-            .put("client", Setting.simpleString("client"))
-            .put("buffer_size", Setting.byteSizeSetting("buffer_size", S3_DEFAULT_BUFFER_SIZE,
-                new ByteSizeValue(5, ByteSizeUnit.MB), new ByteSizeValue(5, ByteSizeUnit.GB)))
-            .put("canned_acl", Setting.simpleString("canned_acl"))
-            .put("chunk_size", Setting.byteSizeSetting("chunk_size", new ByteSizeValue(1, ByteSizeUnit.GB),
-                new ByteSizeValue(5, ByteSizeUnit.MB), new ByteSizeValue(5, ByteSizeUnit.TB)))
-            .put("compress", Setting.boolSetting("compress", true)) // TODO: ES defaults to false!
-            .put("server_side_encryption",
-                Setting.boolSetting("server_side_encryption", false))
+        Map.of(),
+        Maps.concat(
+            convertSettingListToMap(S3Repository.optionalSettingsToValidate()),
             // client related settings
-            .put("access_key", SecureSetting.insecureString("access_key"))
-            .put("secret_key", SecureSetting.insecureString("secret_key"))
-            .put("endpoint", Setting.simpleString("endpoint")
-            )
-            .put("protocol", new Setting<>("protocol", "https", s -> Protocol.valueOf(s.toUpperCase(Locale.ROOT))))
-            .put("max_retries", Setting.intSetting("max_retries", 3))
-            .put("use_throttle_retries", Setting.boolSetting("use_throttle_retries", true))
-            .build());
+            convertSettingListToMap(renameSettingsUsingSuffixAsKey(S3ClientSettings.optionalSettingsToValidate()))
+        ));
 
     @Override
     protected void configure() {
@@ -141,6 +110,22 @@ public class RepositorySettingsModule extends AbstractModule {
     }
 
     private static Map<String, Setting> convertSettingListToMap(List<Setting> settingList) {
-        return settingList.stream().collect(Collectors.toMap(Setting::getKey, s -> s));
+        return settingList.stream().collect(Collectors.toMap(Setting::getKey, Function.identity()));
+    }
+
+    /**
+     * Copy and rename {@link Setting}s.
+     * For each Setting, a new Setting is created
+     * with it's key suffix acting as the new key
+     *
+     * eg. From Setting: s3.client.default.endpoint
+     * a new Setting will be created with same characteristics
+     * and new key name: endpoint
+     */
+    private static List<Setting> renameSettingsUsingSuffixAsKey(List<Setting> settingList) {
+        return settingList
+            .stream()
+            .map(s -> s.copyAndRename(k -> ((String) k).substring(((String) k).lastIndexOf('.') + 1)))
+            .collect(Collectors.toList());
     }
 }
